# PFLHASKELLPROJECT

./: CHANGELOG.md  Dockerfile  LICENSE  PFLHASKELLPROJECT.cabal  README.md  average.html  countrytrend.html  index.html  least.html  map.html  topcountries.html  trend.html
app/: Dockerfile  Main.hs
data/: globalwastedata.csv  waste.csv
frontend/: index.html  script.js
