cabal-version: 3.0

name: PFLHASKELLPROJECT
version: 0.1.0.0
build-type: Simple
license: MIT
author: Charitha
maintainer: charitha@example.com
category: Web

executable PFLHASKELLPROJECT
  main-is: Main.hs
  hs-source-dirs: app
  default-language: Haskell2010

  ghc-options: -threaded -rtsopts -with-rtsopts=-N

  build-depends:
      base >=4.7 && <5,
      scotty,
      aeson,
      cassava,
      vector,
      text,
      bytestring,
      wai,
      warp