cabal-version: 2.4

name: PFLHASKELLPROJECT
version: 0.1.0.0
build-type: Simple

executable PFLHASKELLPROJECT
  main-is: Main.hs
  hs-source-dirs: app
  default-language: Haskell2010

  ghc-options: -threaded -rtsopts -with-rtsopts=-N

  build-depends:
      base >=4.7 && <5,
      scotty,
      aeson,
      cassava,
      vector,
      text,
      bytestring,
      wai,
      warp,
      wai-middleware-static